--- a/betterdungeons/lang/zh_tw.json
+++ b/betterdungeons/lang/zh_tw.json
@@ -1,5 +1,5 @@
 {
-  "Small Nether Dungeons are currently disabled by default. You can enable them in the mod's config.": "小型下界地牢默認關閉，你可以在模組的配置中手動開啟。",
+  "Small Nether Dungeons are currently disabled by default. You can enable them in the mod's config.": "小型地獄地牢默認關閉，你可以在模組的配置中手動開啟。",
   "betterdungeons.small_dungeon.banner.zombie": "污穢旗幟",
   "Foul Banner": "污穢旗幟",
   "betterdungeons.small_dungeon.banner.skeleton": "復仇旗幟",
@@ -23,8 +23,8 @@
   "Find an upgraded Monster Room": "發現一個全新的小型地牢",
   "betterdungeons.advancements.skeleton_dungeon.title": "石頭里挑骨頭",
   "A Bone to Pick": "石頭里挑骨頭",
-  "betterdungeons.advancements.skeleton_dungeon.description": "闖入一個亡靈要塞",
-  "Enter a Fortress of the Undead": "闖入一個亡靈要塞",
+  "betterdungeons.advancements.skeleton_dungeon.description": "闖入一個死靈要塞",
+  "Enter a Fortress of the Undead": "闖入一個死靈要塞",
   "betterdungeons.advancements.spider_dungeon.title": "盤絲洞",
   "Cobweb Entanglement": "盤絲洞",
   "betterdungeons.advancements.spider_dungeon.description": "發現一個蜘蛛洞穴",
@@ -34,17 +34,17 @@
   "betterdungeons.advancements.zombie_dungeon.description": "踏入一個地下墓穴",
   "Set foot in a Catacomb": "踏入一個地下墓穴",
   "A Special Addition": "特殊贈品",
-  "Find a Small Nether Dungeon": "找到一個小型下界地牢",
+  "Find a Small Nether Dungeon": "找到一個小型地獄地牢",
   "text.autoconfig.betterdungeons-fabric-1_19.title": "YUNG的更好地牢",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons": "YUNG的更好地牢",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general": "通用設置",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.@Tooltip": "通用設置",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.zombieDungeon": "僵屍地牢",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.zombieDungeon.@Tooltip": "僵屍地牢",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.zombieDungeon": "殭屍地牢",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.zombieDungeon.@Tooltip": "殭屍地牢",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallDungeon": "小型地牢",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallDungeon.@Tooltip": "小型地牢",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon": "小型下界地牢",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.@Tooltip": "小型下界地牢",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon": "小型地獄地牢",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.@Tooltip": "小型地獄地牢",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableHeads": "允許生成頭顱",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableHeads.@Tooltip[0]": "允許地牢在生成的時候放置怪物的頭顱作為裝飾。",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableHeads.@Tooltip[1]": "這個選項也許對整合包開發者有用。",
@@ -53,13 +53,13 @@
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.removeVanillaDungeons.@Tooltip[0]": "阻止原版地牢的生成。",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.removeVanillaDungeons.@Tooltip[1]": "建議開啟，因為小型地牢的設計與原版地牢相似。",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.removeVanillaDungeons.@Tooltip[2]": "默認：開啟",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableNetherBlocks": "允許下界方塊在地牢中生成",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableNetherBlocks.@Tooltip[0]": "一些地牢偶爾會生成一些下界特有的方塊，例如靈魂沙、靈魂營火，以及靈魂燈籠等。",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableNetherBlocks.@Tooltip[1]": "這些方塊只是單純的裝飾品，不會有例如遠古殘骸等破壞遊戲進度的物品出現。",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableNetherBlocks.@Tooltip[2]": "設置為關閉則可以阻止所有下界相關的方塊在地牢中生成。",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableNetherBlocks": "允許地獄方塊在地牢中生成",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableNetherBlocks.@Tooltip[0]": "一些地牢偶爾會生成一些地獄特有的方塊，例如靈魂沙、靈魂營火，以及靈魂燈籠等。",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableNetherBlocks.@Tooltip[1]": "這些方塊只是單純的裝飾品，不會有例如遠古遺骸等破壞遊戲進度的物品出現。",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableNetherBlocks.@Tooltip[2]": "設置為關閉則可以阻止所有地獄相關的方塊在地牢中生成。",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableNetherBlocks.@Tooltip[3]": "這個選項也許對整合包開發者有用。",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.general.enableNetherBlocks.@Tooltip[4]": "默認：開啟",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.zombieDungeon.zombieDungeonMaxSurfaceStaircaseLength": "僵屍地牢地面入口樓梯最大長度",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.zombieDungeon.zombieDungeonMaxSurfaceStaircaseLength": "殭屍地牢地面入口樓梯最大長度",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.zombieDungeon.zombieDungeonMaxSurfaceStaircaseLength.@Tooltip[0]": "當試圖生成一個地面入口樓梯時，允許生成的最長距離。",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.zombieDungeon.zombieDungeonMaxSurfaceStaircaseLength.@Tooltip[1]": "將其設置過長可能會導致一些問題。",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.zombieDungeon.zombieDungeonMaxSurfaceStaircaseLength.@Tooltip[2]": "默認：20",
@@ -76,13 +76,13 @@
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallDungeon.enableOreProps.@Tooltip[0]": "允許小型地牢偶爾在角落上生成礦石。",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallDungeon.enableOreProps.@Tooltip[1]": "如果關閉，則任何在角落上生成的礦物都會被空氣替換。",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallDungeon.enableOreProps.@Tooltip[2]": "默認：開啟",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.bannerMaxCount": "小型下界地牢旗幟數量上限。",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.bannerMaxCount.@Tooltip[0]": "在單個小型下界地牢中生成的旗幟數量上限。",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.bannerMaxCount": "小型地獄地牢旗幟數量上限。",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.bannerMaxCount.@Tooltip[0]": "在單個小型地獄地牢中生成的旗幟數量上限。",
   "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.bannerMaxCount.@Tooltip[1]": "默認：2",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.enabled": "允許小型下界地牢生成",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.enabled.@Tooltip": "允許小型下界地牢生成",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.witherSkeletonsDropWitherSkulls": "由生怪磚生成的雕靈骷髏可以掉落頭顱",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.witherSkeletonsDropWitherSkulls.@Tooltip": "允許由小型下界地牢的生怪磚生成的雕靈骷髏概率掉落頭顱",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.blazesDropBlazeRods": "由生怪磚生成的烈焰人可以掉落烈焰棒",
-  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.blazesDropBlazeRods.@Tooltip": "允許由小型下界地牢的生怪磚生成的烈焰人概率掉落烈焰棒"
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.enabled": "允許小型地獄地牢生成",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.enabled.@Tooltip": "允許小型地獄地牢生成",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.witherSkeletonsDropWitherSkulls": "由生怪磚生成的凋零骷髏可以掉落頭顱",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.witherSkeletonsDropWitherSkulls.@Tooltip": "允許由小型地獄地牢的生怪磚生成的凋零骷髏概率掉落頭顱",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.blazesDropBlazeRods": "由生怪磚生成的烈焰使者可以掉落烈焰棒",
+  "text.autoconfig.betterdungeons-fabric-1_19.option.betterDungeons.smallNetherDungeon.blazesDropBlazeRods.@Tooltip": "允許由小型地獄地牢的生怪磚生成的烈焰使者概率掉落烈焰棒"
 }
