--- a/bettershields/lang/zh_tw.json
+++ b/bettershields/lang/zh_tw.json
@@ -7,13 +7,13 @@
   "item.bettershields.iron_shield.blue": "藍色鐵盾牌",
   "item.bettershields.iron_shield.purple": "紫色鐵盾牌",
   "item.bettershields.iron_shield.cyan": "青色鐵盾牌",
-  "item.bettershields.iron_shield.light_gray": "淡灰色鐵盾牌",
+  "item.bettershields.iron_shield.light_gray": "淺灰色鐵盾牌",
   "item.bettershields.iron_shield.gray": "灰色鐵盾牌",
   "item.bettershields.iron_shield.pink": "粉紅色鐵盾牌",
-  "item.bettershields.iron_shield.lime": "黃綠色鐵盾牌",
+  "item.bettershields.iron_shield.lime": "淺綠色鐵盾牌",
   "item.bettershields.iron_shield.yellow": "黃色鐵盾牌",
-  "item.bettershields.iron_shield.light_blue": "淡藍色鐵盾牌",
-  "item.bettershields.iron_shield.magenta": "品紅色鐵盾牌",
+  "item.bettershields.iron_shield.light_blue": "淺藍色鐵盾牌",
+  "item.bettershields.iron_shield.magenta": "洋紅色鐵盾牌",
   "item.bettershields.iron_shield.orange": "橙色鐵盾牌",
   "item.bettershields.iron_shield.white": "白色鐵盾牌",
   "item.bettershields.gold_shield": "金盾牌",
@@ -24,13 +24,13 @@
   "item.bettershields.gold_shield.blue": "藍色金盾牌",
   "item.bettershields.gold_shield.purple": "紫色金盾牌",
   "item.bettershields.gold_shield.cyan": "青色金盾牌",
-  "item.bettershields.gold_shield.light_gray": "淡灰色金盾牌",
+  "item.bettershields.gold_shield.light_gray": "淺灰色金盾牌",
   "item.bettershields.gold_shield.gray": "灰色金盾牌",
   "item.bettershields.gold_shield.pink": "粉紅色金盾牌",
-  "item.bettershields.gold_shield.lime": "黃綠色金盾牌",
+  "item.bettershields.gold_shield.lime": "淺綠色金盾牌",
   "item.bettershields.gold_shield.yellow": "黃色金盾牌",
-  "item.bettershields.gold_shield.light_blue": "淡藍色金盾牌",
-  "item.bettershields.gold_shield.magenta": "品紅色金盾牌",
+  "item.bettershields.gold_shield.light_blue": "淺藍色金盾牌",
+  "item.bettershields.gold_shield.magenta": "洋紅色金盾牌",
   "item.bettershields.gold_shield.orange": "橙色金盾牌",
   "item.bettershields.gold_shield.white": "白色金盾牌",
   "item.bettershields.diamond_shield": "鑽石盾牌",
@@ -41,13 +41,13 @@
   "item.bettershields.diamond_shield.blue": "藍色鑽石盾牌",
   "item.bettershields.diamond_shield.purple": "紫色鑽石盾牌",
   "item.bettershields.diamond_shield.cyan": "青色鑽石盾牌",
-  "item.bettershields.diamond_shield.light_gray": "淡灰色鑽石盾牌",
+  "item.bettershields.diamond_shield.light_gray": "淺灰色鑽石盾牌",
   "item.bettershields.diamond_shield.gray": "灰色鑽石盾牌",
   "item.bettershields.diamond_shield.pink": "粉紅色鑽石盾牌",
-  "item.bettershields.diamond_shield.lime": "黃綠色鑽石盾牌",
+  "item.bettershields.diamond_shield.lime": "淺綠色鑽石盾牌",
   "item.bettershields.diamond_shield.yellow": "黃色鑽石盾牌",
-  "item.bettershields.diamond_shield.light_blue": "淡藍色鑽石盾牌",
-  "item.bettershields.diamond_shield.magenta": "品紅色鑽石盾牌",
+  "item.bettershields.diamond_shield.light_blue": "淺藍色鑽石盾牌",
+  "item.bettershields.diamond_shield.magenta": "洋紅色鑽石盾牌",
   "item.bettershields.diamond_shield.orange": "橙色鑽石盾牌",
   "item.bettershields.diamond_shield.white": "白色鑽石盾牌",
   "item.bettershields.netherite_shield": "獄髓盾牌",
@@ -58,13 +58,13 @@
   "item.bettershields.netherite_shield.blue": "藍色獄髓盾牌",
   "item.bettershields.netherite_shield.purple": "紫色獄髓盾牌",
   "item.bettershields.netherite_shield.cyan": "青色獄髓盾牌",
-  "item.bettershields.netherite_shield.light_gray": "淡灰色獄髓盾牌",
+  "item.bettershields.netherite_shield.light_gray": "淺灰色獄髓盾牌",
   "item.bettershields.netherite_shield.gray": "灰色獄髓盾牌",
   "item.bettershields.netherite_shield.pink": "粉紅色獄髓盾牌",
-  "item.bettershields.netherite_shield.lime": "黃綠色獄髓盾牌",
+  "item.bettershields.netherite_shield.lime": "淺綠色獄髓盾牌",
   "item.bettershields.netherite_shield.yellow": "黃色獄髓盾牌",
-  "item.bettershields.netherite_shield.light_blue": "淡藍色獄髓盾牌",
-  "item.bettershields.netherite_shield.magenta": "品紅色獄髓盾牌",
+  "item.bettershields.netherite_shield.light_blue": "淺藍色獄髓盾牌",
+  "item.bettershields.netherite_shield.magenta": "洋紅色獄髓盾牌",
   "item.bettershields.netherite_shield.orange": "橙色獄髓盾牌",
   "item.bettershields.netherite_shield.white": "白色獄髓盾牌",
   "bettershields.shield_damage_reduction": " %d%% 傷害減免",
