--- a/betterthanbunnies/lang/zh_tw.json
+++ b/betterthanbunnies/lang/zh_tw.json
@@ -3,14 +3,14 @@
   "config.betterthanbunnies.cat.general.desc": "不適合任何其他類別的常規設置。",
   "config.betterthanbunnies.cat.outfit.name": "衣服設置",
   "config.betterthanbunnies.cat.outfit.desc": "關於穿著兔子的衣服。",
-  "config.betterthanbunnies.prop.fancyChance.name": "帶服裝幾率",
-  "config.betterthanbunnies.prop.fancyChance.desc": "兔子穿著衣服的幾率（0%-100%）",
-  "config.betterthanbunnies.prop.hatChance.name": "帶帽子的幾率",
-  "config.betterthanbunnies.prop.hatChance.desc": "兔子戴帽子的幾率（0%-100%）",
-  "config.betterthanbunnies.prop.monocleChance.name": "帶單片眼鏡的幾率",
-  "config.betterthanbunnies.prop.monocleChance.desc": "兔子佩戴單片眼鏡的幾率（0%-100%）",
-  "config.betterthanbunnies.prop.pipeChance.name": "帶煙斗的幾率",
-  "config.betterthanbunnies.prop.pipeChance.desc": "兔子有煙斗的幾率（0%-100%）",
-  "config.betterthanbunnies.prop.suitChance.name": "穿西裝的幾率",
-  "config.betterthanbunnies.prop.suitChance.desc": "兔子穿西裝的幾率（0%-100%）"
+  "config.betterthanbunnies.prop.fancyChance.name": "帶服裝機率",
+  "config.betterthanbunnies.prop.fancyChance.desc": "兔子穿著衣服的機率（0%-100%）",
+  "config.betterthanbunnies.prop.hatChance.name": "帶帽子的機率",
+  "config.betterthanbunnies.prop.hatChance.desc": "兔子戴帽子的機率（0%-100%）",
+  "config.betterthanbunnies.prop.monocleChance.name": "帶單片眼鏡的機率",
+  "config.betterthanbunnies.prop.monocleChance.desc": "兔子佩戴單片眼鏡的機率（0%-100%）",
+  "config.betterthanbunnies.prop.pipeChance.name": "帶煙斗的機率",
+  "config.betterthanbunnies.prop.pipeChance.desc": "兔子有煙斗的機率（0%-100%）",
+  "config.betterthanbunnies.prop.suitChance.name": "穿西裝的機率",
+  "config.betterthanbunnies.prop.suitChance.desc": "兔子穿西裝的機率（0%-100%）"
 }
