--- a/beyond_earth/lang/zh_tw.json
+++ b/beyond_earth/lang/zh_tw.json
@@ -13,7 +13,7 @@
   "item.beyond_earth.desh_engine": "戴斯引擎",
   "item.beyond_earth.hammer": "錘子",
   "item.beyond_earth.ostrum_engine": "紫金引擎",
-  "item.beyond_earth.alien_zombie_spawn_egg": "外星僵屍生怪蛋",
+  "item.beyond_earth.alien_zombie_spawn_egg": "外星殭屍生怪蛋",
   "item.beyond_earth.ostrum_ingot": "紫金錠",
   "item.beyond_earth.desh_tank": "戴斯儲罐",
   "item.beyond_earth.rocket_nose_cone": "火箭鼻錐",
@@ -21,8 +21,8 @@
   "item.beyond_earth.steel_ingot": "鋼錠",
   "item.beyond_earth.wheel": "車輪",
   "item.beyond_earth.steel_tank": "鋼儲罐",
-  "item.beyond_earth.pygro_spawn_egg": "外星豬靈生怪蛋",
-  "item.beyond_earth.pygro_brute_spawn_egg": "外星豬靈蠻兵生怪蛋",
+  "item.beyond_earth.pygro_spawn_egg": "外星豬布林生怪蛋",
+  "item.beyond_earth.pygro_brute_spawn_egg": "外星豬布林蠻兵生怪蛋",
   "item.beyond_earth.iron_rod": "鐵棒",
   "item.beyond_earth.oxygen_gear": "供氧設備",
   "item.beyond_earth.engine_fan": "引擎扇葉",
@@ -30,7 +30,7 @@
   "item.beyond_earth.rover": "漫遊車",
   "item.beyond_earth.alien_spawn_egg": "外星村民生怪蛋",
   "item.beyond_earth.cheese": "奶酪",
-  "item.beyond_earth.mogler_spawn_egg": "外星疣豬獸生怪蛋",
+  "item.beyond_earth.mogler_spawn_egg": "外星豬布獸生怪蛋",
   "item.beyond_earth.martian_raptor_spawn_egg": "火星迅猛龍生怪蛋",
   "item.beyond_earth.desh_ingot": "戴斯錠",
   "item.beyond_earth.compressed_desh": "壓縮戴斯板",
@@ -38,10 +38,10 @@
   "item.beyond_earth.ostrum_nugget": "紫金粒",
   "item.beyond_earth.steel_nugget": "鋼粒",
   "item.beyond_earth.water_pump": "水泵",
-  "item.beyond_earth.raw_desh": "粗戴斯",
-  "item.beyond_earth.raw_ostrum": "粗紫金",
-  "item.beyond_earth.raw_desh_block": "粗戴斯塊",
-  "item.beyond_earth.raw_ostrum_block": "粗紫金塊",
+  "item.beyond_earth.raw_desh": "戴斯原礦",
+  "item.beyond_earth.raw_ostrum": "紫金原礦",
+  "item.beyond_earth.raw_desh_block": "戴斯原礦塊",
+  "item.beyond_earth.raw_ostrum_block": "紫金原礦塊",
   "item.beyond_earth.ice_shard": "寒冰碎片",
   "item.beyond_earth.rocket_t1": "一階火箭",
   "item.beyond_earth.rocket_t2": "二階火箭",
@@ -100,21 +100,21 @@
   "block.beyond_earth.flag_brown": "棕色旗幟",
   "block.beyond_earth.flag_green": "綠色旗幟",
   "block.beyond_earth.flag_yellow": "黃色旗幟",
-  "block.beyond_earth.flag_magenta": "品紅色旗幟",
+  "block.beyond_earth.flag_magenta": "洋紅色旗幟",
   "block.beyond_earth.flag": "旗幟",
   "block.beyond_earth.oxygen_loader": "氧氣裝載機",
   "block.beyond_earth.venus_sand": "金星沙",
-  "block.beyond_earth.mars_diamond_ore": "火星鉆石礦石",
+  "block.beyond_earth.mars_diamond_ore": "火星鑽石礦石",
   "block.beyond_earth.fuel_refinery": "燃油精煉機",
   "block.beyond_earth.rusted_iron_plating_block": "銹蝕鐵板方塊",
-  "block.beyond_earth.venus_diamond_ore": "金星鉆石礦石",
+  "block.beyond_earth.venus_diamond_ore": "金星鑽石礦石",
   "block.beyond_earth.moon_stone": "月石",
   "block.beyond_earth.moon_sand": "月沙",
   "block.beyond_earth.sky_stone": "隕石",
   "block.beyond_earth.flag_gray": "灰色旗幟",
   "block.beyond_earth.wall_coal_torch": "煤炭火把",
   "block.beyond_earth.flag_blue": "藍色旗幟",
-  "block.beyond_earth.venus_sandstone": "金星砂巖",
+  "block.beyond_earth.venus_sandstone": "金星砂岩",
   "block.beyond_earth.flag_pink": "粉紅色旗幟",
   "block.beyond_earth.flag_purple": "紫色旗幟",
   "block.beyond_earth.mercury_stone": "水星石",
@@ -126,14 +126,14 @@
   "block.beyond_earth.moon_iron_ore": "月球鐵礦石",
   "block.beyond_earth.flag_orange": "橙色旗幟",
   "block.beyond_earth.steel_block": "鋼塊",
-  "block.beyond_earth.ostrum_block": "紫金塊",
+  "block.beyond_earth.ostrum_block": "紫金方塊",
   "block.beyond_earth.venus_coal_ore": "金星煤礦石",
   "block.beyond_earth.flag_lime": "黃綠色旗幟",
   "block.beyond_earth.moon_cheese_ore": "月球奶酪礦石",
   "block.beyond_earth.moon_desh_ore": "月球戴斯礦石",
   "block.beyond_earth.water_pump": "水泵",
-  "block.beyond_earth.raw_desh_block": "粗戴斯塊",
-  "block.beyond_earth.raw_ostrum_block": "粗紫金塊",
+  "block.beyond_earth.raw_desh_block": "戴斯原礦塊",
+  "block.beyond_earth.raw_ostrum_block": "紫金原礦塊",
   "block.beyond_earth.moon_ice_shard_ore": "月球寒冰碎片礦石",
   "block.beyond_earth.mars_ice_shard_ore": "火星寒冰碎片礦石",
   "block.beyond_earth.glacio_ice_shard_ore": "霜原寒冰碎片礦石",
@@ -143,34 +143,34 @@
   "block.beyond_earth.infernal_spire": "炎獄尖塔",
   "block.beyond_earth.barricade_block": "路障方塊",
   "block.beyond_earth.meteorite": "隕石",
-  "block.beyond_earth.moon_stone_brick_slab": "月石磚台階",
+  "block.beyond_earth.moon_stone_brick_slab": "月石半磚",
   "block.beyond_earth.moon_stone_bricks": "月石磚",
   "block.beyond_earth.cracked_moon_stone_bricks": "裂紋月石磚",
   "block.beyond_earth.moon_stone_brick_stairs": "月石磚樓梯",
-  "block.beyond_earth.mars_stone_brick_slab": "火星石磚台階",
+  "block.beyond_earth.mars_stone_brick_slab": "火星石半磚",
   "block.beyond_earth.mars_stone_bricks": "火星石磚",
   "block.beyond_earth.cracked_mars_stone_bricks": "裂紋火星石磚",
   "block.beyond_earth.mars_stone_brick_stairs": "火星石磚樓梯",
-  "block.beyond_earth.mercury_stone_brick_slab": "水星石磚台階",
+  "block.beyond_earth.mercury_stone_brick_slab": "水星石半磚",
   "block.beyond_earth.mercury_stone_bricks": "水星石磚",
   "block.beyond_earth.cracked_mercury_stone_bricks": "裂紋水星石磚",
   "block.beyond_earth.mercury_stone_brick_stairs": "水星石磚樓梯",
-  "block.beyond_earth.venus_stone_brick_slab": "金星石磚台階",
+  "block.beyond_earth.venus_stone_brick_slab": "金星石半磚",
   "block.beyond_earth.venus_stone_bricks": "金星石磚",
   "block.beyond_earth.cracked_venus_stone_bricks": "裂紋金星石磚",
   "block.beyond_earth.venus_stone_brick_stairs": "金星石磚樓梯",
-  "block.beyond_earth.venus_sandstone_brick_slab": "金星砂巖磚台階",
-  "block.beyond_earth.venus_sandstone_bricks": "金星砂巖磚",
-  "block.beyond_earth.cracked_venus_sandstone_bricks": "裂紋金星砂巖磚",
-  "block.beyond_earth.venus_sandstone_brick_stairs": "金星砂巖磚",
+  "block.beyond_earth.venus_sandstone_brick_slab": "金星砂岩半磚",
+  "block.beyond_earth.venus_sandstone_bricks": "金星砂岩磚",
+  "block.beyond_earth.cracked_venus_sandstone_bricks": "裂紋金星砂岩磚",
+  "block.beyond_earth.venus_sandstone_brick_stairs": "金星砂岩磚",
   "block.beyond_earth.venus_calorite_ore": "金星耐熱金屬礦石",
   "block.beyond_earth.calorite_block": "耐熱金屬塊",
-  "block.beyond_earth.raw_calorite_block": "粗耐熱金屬塊",
+  "block.beyond_earth.raw_calorite_block": "耐熱金屬原礦塊",
   "block.beyond_earth.permafrost": "凍土",
   "block.beyond_earth.glacio_stone": "霜原石",
   "block.beyond_earth.glacio_stone_bricks": "霜原石磚",
   "block.beyond_earth.cracked_glacio_stone_bricks": "裂紋霜原石磚",
-  "block.beyond_earth.glacio_stone_brick_slab": "霜原石磚台階",
+  "block.beyond_earth.glacio_stone_brick_slab": "霜原石半磚",
   "block.beyond_earth.glacio_stone_brick_stairs": "霜原石磚樓梯",
   "block.beyond_earth.glacio_coal_ore": "霜原煤礦石",
   "block.beyond_earth.glacio_copper_ore": "霜原銅礦石",
@@ -186,11 +186,11 @@
   "fluid.fuel": "燃油",
   "fluid.beyond_earth.oil": "石油",
   "fluid.oil": "石油",
-  "entity.beyond_earth.mogler": "外星疣豬獸",
-  "entity.beyond_earth.pygro": "外星豬靈",
-  "entity.beyond_earth.pygro_brute": "外星豬靈蠻兵",
+  "entity.beyond_earth.mogler": "外星豬布獸",
+  "entity.beyond_earth.pygro": "外星豬布林",
+  "entity.beyond_earth.pygro_brute": "外星豬布林蠻兵",
   "entity.beyond_earth.alien": "外星村民",
-  "entity.beyond_earth.alien_zombie": "外星僵屍",
+  "entity.beyond_earth.alien_zombie": "外星殭屍",
   "entity.beyond_earth.star_crawler": "星際爬行者",
   "entity.beyond_earth.martian_raptor": "火星迅猛龍",
   "entity.beyond_earth.rocket_t1": "一階火箭",
@@ -211,15 +211,15 @@
   "biome.beyond_earth.glacio": "霜原星",
   "biome.beyond_earth.glacio_ice_spikes": "霜原冰刺之地",
   "advancements.workbench_advancement.title": "NASA工作台",
-  "advancements.workbench_advancement.descr": "§b制作一個NASA工作台",
+  "advancements.workbench_advancement.descr": "§b製作一個NASA工作台",
   "advancements.rocket_advancement.title": "一階火箭",
-  "advancements.rocket_advancement.descr": "§b制作一個一階火箭",
+  "advancements.rocket_advancement.descr": "§b製作一個一階火箭",
   "advancements.rocket_tier_2_advancement.title": "二階火箭",
-  "advancements.rocket_tier_2_advancement.descr": "§b制作一個二階火箭",
+  "advancements.rocket_tier_2_advancement.descr": "§b製作一個二階火箭",
   "advancements.rocket_tier_3_advancement.title": "三階火箭",
-  "advancements.rocket_tier_3_advancement.descr": "§b制作一個三階火箭",
+  "advancements.rocket_tier_3_advancement.descr": "§b製作一個三階火箭",
   "advancements.rocket_tier_4_advancement.title": "四階火箭",
-  "advancements.rocket_tier_4_advancement.descr": "§b制作一個四階火箭",
+  "advancements.rocket_tier_4_advancement.descr": "§b製作一個四階火箭",
   "advancements.moon_advancement.title": "月球",
   "advancements.moon_advancement.descr": "§b登上月球",
   "effect.beyond_earth.oxygen_bubble_effect": "氧氣氣泡",
@@ -231,9 +231,9 @@
   "entity.beyond_earth.alien.farmer": "農民",
   "entity.beyond_earth.alien.fisherman": "漁夫",
   "entity.beyond_earth.alien.shepherd": "牧羊人",
-  "entity.beyond_earth.alien.fletcher": "制箭師",
+  "entity.beyond_earth.alien.fletcher": "製箭師",
   "entity.beyond_earth.alien.librarian": "圖書管理員",
-  "entity.beyond_earth.alien.cartographer": "制圖師",
+  "entity.beyond_earth.alien.cartographer": "製圖師",
   "entity.beyond_earth.alien.cleric": "牧師",
   "entity.beyond_earth.alien.armorer": "盔甲匠",
   "entity.beyond_earth.alien.weaponsmith": "武器匠",
@@ -285,7 +285,7 @@
   "gui.beyond_earth.planet_selection.temperature": "溫度",
   "gui.beyond_earth.planet_selection.item_requirement": "所需物品",
   "gui.beyond_earth.planet_selection.back": "返回",
-  "gui.beyond_earth.planet_selection.solar_system": "恒星系",
+  "gui.beyond_earth.planet_selection.solar_system": "恆星系",
   "gui.beyond_earth.planet_selection.planet": "行星",
   "gui.beyond_earth.planet_selection.orbit": "軌道",
   "gui.beyond_earth.planet_selection.space_station": "空間站",
