--- a/beyond_earth_giselle_addon/lang/zh_tw.json
+++ b/beyond_earth_giselle_addon/lang/zh_tw.json
@@ -40,12 +40,12 @@
   "gui.beyond_earth_giselle_addon.flag_edit.verifying": "正在查找",
   "gui.beyond_earth_giselle_addon.flag_edit.save": "保存",
   "compressormode.beyond_earth.compressing": "壓縮",
-  "compressormode.beyond_earth_giselle_addon.rolling": "軋制",
+  "compressormode.beyond_earth_giselle_addon.rolling": "軋製",
   "compressormode.beyond_earth_giselle_addon.extruding": "擠壓",
   "chargemode.beyond_earth_giselle_addon.none": "禁用",
   "chargemode.beyond_earth_giselle_addon.armors": "啟用：盔甲",
   "chargemode.beyond_earth_giselle_addon.all": "啟用：物品欄",
-  "jei.category.beyond_earth_giselle_addon.rolling": "高級壓縮機 - 軋制",
+  "jei.category.beyond_earth_giselle_addon.rolling": "高級壓縮機 - 軋製",
   "jei.category.beyond_earth_giselle_addon.extruding": "高級壓縮機 - 擠壓",
   "jei.tooltip.beyond_earth_giselle_addon.incompatible_mode1": "模式錯誤",
   "jei.tooltip.beyond_earth_giselle_addon.incompatible_mode2": "請切換至 %s 模式",
