--- a/bhc/lang/zh_tw.json
+++ b/bhc/lang/zh_tw.json
@@ -18,7 +18,7 @@
   "item.bhc.yellow_heart_patch": "黃心治療創可貼",
   "item.bhc.green_heart_patch": "綠心治療創可貼",
   "item.bhc.blue_heart_patch": "藍心治療創可貼",
-  "item.bhc.wither_bone": "雕靈之骨",
+  "item.bhc.wither_bone": "凋零之骨",
   "item.bhc.relic_apple": "遺物蘋果",
   "item.bhc.heart_amulet": "心之項鏈",
   "item.bhc.soul_heart_crystal": "魂心水晶",
@@ -28,8 +28,8 @@
   "container.bhc.soul_heart_amulet": "靈魂項鏈",
   "tooltip.bhc.heartamulet": "右鍵打開！",
   "tooltip.bhc.vitality_blade": "Shift右鍵打開！",
-  "tooltip.bhc.patch_amount": "恢覆生命值：%s",
-  "tooltip.bhc.patch_durability": "剩余次數：%s",
+  "tooltip.bhc.patch_amount": "恢復生命值：%s",
+  "tooltip.bhc.patch_durability": "剩餘次數：%s",
   "container.bhc.blade_of_vitality": "活力之劍",
   "soulheartused.bhc.message": "魂心已碎裂！",
   "curios.identifier.heartamulet": "心之項鏈"
