--- a/bigbrain/lang/zh_tw.json
+++ b/bigbrain/lang/zh_tw.json
@@ -1,6 +1,6 @@
 {
   "item.bigbrain.buckler": "圓盾",
-  "subtitles.entity.piglin_brute.charge": "豬靈蠻兵猛沖",
+  "subtitles.entity.piglin_brute.charge": "豬布林蠻兵猛沖",
   "subtitles.item.buckler.bash": "圓盾重擊",
   "item.bigbrain.buckler.desc.charge": "長按右鍵蓄力後向前猛沖",
   "item.bigbrain.buckler.desc.while": "猛沖時：",
