--- a/biggerreactors/lang/zh_tw.json
+++ b/biggerreactors/lang/zh_tw.json
@@ -10,9 +10,9 @@
   "fluid.biggerreactors.superheated_sodium": "液態過熱鈉",
   "item.biggerreactors.superheated_sodium_bucket": "液態過熱鈉桶",
   "block.biggerreactors.uranium_ore": "鈾礦石",
-  "block.biggerreactors.deepslate_uranium_ore": "深層鈾礦石",
+  "block.biggerreactors.deepslate_uranium_ore": "深板岩鈾礦石",
   "block.biggerreactors.uranium_block": "鈾塊",
-  "block.biggerreactors.raw_uranium_block": "粗鈾塊",
+  "block.biggerreactors.raw_uranium_block": "鈾原礦塊",
   "item.biggerreactors.uranium_dust": "鈾粉",
   "item.biggerreactors.uranium_ingot": "鈾錠",
   "item.biggerreactors.uranium_chunk": "鈾碎塊",
@@ -98,13 +98,13 @@
   "screen.biggerreactors.reactor_redstone_port.choose_setting": "選擇一個設置：",
   "screen.biggerreactors.reactor_redstone_port.apply.tooltip": "確認",
   "screen.biggerreactors.reactor_redstone_port.input_reactor_activity": "改變反應堆狀態（輸入）",
-  "screen.biggerreactors.reactor_redstone_port.input_reactor_activity.tooltip": "改變反應堆狀態（輸入）\n§8[紅石脈沖]切換反應堆的開關。\n§8[紅石信號]紅石激活時，反應堆開啟。",
+  "screen.biggerreactors.reactor_redstone_port.input_reactor_activity.tooltip": "改變反應堆狀態（輸入）\n§8[紅石脈衝]切換反應堆的開關。\n§8[紅石信號]紅石激活時，反應堆開啟。",
   "screen.biggerreactors.reactor_redstone_port.input_control_rod_insertion": "改變控制棒的插入程度（輸入）",
   "screen.biggerreactors.reactor_redstone_port.input_control_rod_insertion.while_on": "輸入紅石信號時：",
   "screen.biggerreactors.reactor_redstone_port.input_control_rod_insertion.while_off": "否則：",
-  "screen.biggerreactors.reactor_redstone_port.input_control_rod_insertion.tooltip": "改變控制棒的插入程度（輸入）\n§8[紅石脈沖]依據當前模式移動控制棒。\n§8[紅石信號]根據紅石信號設置控制棒的插入程度。",
+  "screen.biggerreactors.reactor_redstone_port.input_control_rod_insertion.tooltip": "改變控制棒的插入程度（輸入）\n§8[紅石脈衝]依據當前模式移動控制棒。\n§8[紅石信號]根據紅石信號設置控制棒的插入程度。",
   "screen.biggerreactors.reactor_redstone_port.input_eject_waste": "彈出廢料（輸入）",
-  "screen.biggerreactors.reactor_redstone_port.input_eject_waste.tooltip": "彈出廢料（輸入）\n§8[紅石脈沖]彈出反應堆中的所有廢料。\n§8[紅石信號]N/A。",
+  "screen.biggerreactors.reactor_redstone_port.input_eject_waste.tooltip": "彈出廢料（輸入）\n§8[紅石脈衝]彈出反應堆中的所有廢料。\n§8[紅石信號]N/A。",
   "screen.biggerreactors.reactor_redstone_port.output_fuel_temp": "燃料溫度（輸出）",
   "screen.biggerreactors.reactor_redstone_port.output_fuel_temp.tooltip": "燃料溫度（輸出）\n§8[高於/低於]當燃料溫度高於或低於設定溫度時觸發",
   "screen.biggerreactors.reactor_redstone_port.output_casing_temp": "外殼溫度（輸出）",
@@ -119,9 +119,9 @@
   "screen.biggerreactors.reactor_redstone_port.output_output_stored.tooltip": "能量輸出緩存（輸出）\n§8[高於/低於]當能量緩存高於或低於設定的數值時觸發",
   "screen.biggerreactors.reactor_redstone_port.apply_changes.tooltip": "應用修改\n§7你的修改在應用之前不會生效",
   "screen.biggerreactors.reactor_redstone_port.revert_changes.tooltip": "§4[未確認]\n撤銷修改\n§7將當前的修改重置到上一次應用修改的狀態",
-  "screen.biggerreactors.reactor_redstone_port.trigger_type_toggle.ps.tooltip": "切換觸發器\n§7切換觸發器類型。\n§8[紅石脈沖]當接受到脈沖信號時切換狀態。\n§8[紅石信號]接受到紅石信號時激活。",
+  "screen.biggerreactors.reactor_redstone_port.trigger_type_toggle.ps.tooltip": "切換觸發器\n§7切換觸發器類型。\n§8[紅石脈衝]當接受到脈衝信號時切換狀態。\n§8[紅石信號]接受到紅石信號時激活。",
   "screen.biggerreactors.reactor_redstone_port.trigger_type_toggle.ab.tooltip": "切換觸發器\n§7切換觸發器類型。\n§8[高於/低於]當高於或低於時輸出紅石信號⋯⋯",
-  "screen.biggerreactors.reactor_redstone_port.trigger_type_toggle.ps.on_pulse": "觸發器：紅石脈沖",
+  "screen.biggerreactors.reactor_redstone_port.trigger_type_toggle.ps.on_pulse": "觸發器：紅石脈衝",
   "screen.biggerreactors.reactor_redstone_port.trigger_type_toggle.ps.on_signal": "觸發器：紅石信號",
   "screen.biggerreactors.reactor_redstone_port.trigger_type_toggle.ab.while_above": "觸發器：高於",
   "screen.biggerreactors.reactor_redstone_port.trigger_type_toggle.ab.while_below": "觸發器：低於",
