--- a/bigreactors/lang/zh_tw.json
+++ b/bigreactors/lang/zh_tw.json
@@ -150,9 +150,9 @@
   "gui.bigreactors.reactor.controller.energybar.line3a": "  @1",
   "gui.bigreactors.reactor.controller.energybar.line3b": "% 已滿",
   "gui.bigreactors.reactor.controller.energybar.line4": "產生的能量會被儲存在",
-  "gui.bigreactors.reactor.controller.energybar.line5": "緩沖區，等待輸送給",
+  "gui.bigreactors.reactor.controller.energybar.line5": "緩衝區，等待輸送給",
   "gui.bigreactors.reactor.controller.energybar.line6": "與能量接口相連的用戶",
-  "gui.bigreactors.reactor.controller.energybar.line7": "如果能量緩沖區滿了",
+  "gui.bigreactors.reactor.controller.energybar.line7": "如果能量緩衝區滿了",
   "gui.bigreactors.reactor.controller.energybar.line8": "新產生的能量都會消失",
   "gui.bigreactors.reactor.controller.energyratio.line1": "能量輸出",
   "gui.bigreactors.reactor.controller.energyratio.line2a": "  @0",
@@ -161,7 +161,7 @@
   "gui.bigreactors.reactor.controller.energyratio.line4": "可以直接從堆芯的",
   "gui.bigreactors.reactor.controller.energyratio.line5": "熱量中產生能量",
   "gui.bigreactors.reactor.controller.energyratio.line6": "任何不能儲存在",
-  "gui.bigreactors.reactor.controller.energyratio.line7": "內部能量緩沖區",
+  "gui.bigreactors.reactor.controller.energyratio.line7": "內部能量緩衝區",
   "gui.bigreactors.reactor.controller.energyratio.line8": "的能量都會消失",
   "gui.bigreactors.reactor.controller.coolantbar.line1": "冷卻液緩存槽",
   "gui.bigreactors.reactor.controller.coolantbar.line2": "  @0",
@@ -217,7 +217,7 @@
   "gui.bigreactors.reactor.redstoneport.sensortype.inputactive.line2": "根據收到的紅石信號",
   "gui.bigreactors.reactor.redstoneport.sensortype.inputactive.line3": "開啟或關閉反應堆",
   "gui.bigreactors.reactor.redstoneport.sensortype.inputejectwaste.line1": "排出副產物",
-  "gui.bigreactors.reactor.redstoneport.sensortype.inputejectwaste.line2": "檢測到紅石脈沖時排出",
+  "gui.bigreactors.reactor.redstoneport.sensortype.inputejectwaste.line2": "檢測到紅石脈衝時排出",
   "gui.bigreactors.reactor.redstoneport.sensortype.inputejectwaste.line3": "反應堆堆芯中的副產物",
   "gui.bigreactors.reactor.redstoneport.sensortype.inputsetcontrolrod.line1": "控制桿的插入",
   "gui.bigreactors.reactor.redstoneport.sensortype.inputsetcontrolrod.line2": "更改反應堆中所有",
@@ -244,7 +244,7 @@
   "gui.bigreactors.reactor.redstoneport.sensortype.outputwasteamount.line2": "基於反應堆當前堆芯中的",
   "gui.bigreactors.reactor.redstoneport.sensortype.outputwasteamount.line3": "副產物數量來發出紅石信號",
   "gui.bigreactors.reactor.redstoneport.sensortype.outputenergyamount.line1": "存儲能量",
-  "gui.bigreactors.reactor.redstoneport.sensortype.outputenergyamount.line2": "基於內部能量緩沖區中存儲",
+  "gui.bigreactors.reactor.redstoneport.sensortype.outputenergyamount.line2": "基於內部能量緩衝區中存儲",
   "gui.bigreactors.reactor.redstoneport.sensortype.outputenergyamount.line3": "能量的比例來發出紅石信號",
   "gui.bigreactors.reactor.redstoneport.sensortype.outputcoolantamount.line1": "冷卻液數量",
   "gui.bigreactors.reactor.redstoneport.sensortype.outputcoolantamount.line2": "基於內部冷卻液緩存槽中存儲",
@@ -333,7 +333,7 @@
   "gui.bigreactors.turbine.controller.vent.all.line2": "排出所有冷凝產生",
   "gui.bigreactors.turbine.controller.vent.all.line3": "的冷卻液，冷卻液",
   "gui.bigreactors.turbine.controller.vent.all.line4": "緩存槽不會被填滿",
-  "gui.bigreactors.turbine.controller.vent.overflow.line1": "只排出多余的冷卻液",
+  "gui.bigreactors.turbine.controller.vent.overflow.line1": "只排出多餘的冷卻液",
   "gui.bigreactors.turbine.controller.vent.overflow.line2": "將無法存儲在",
   "gui.bigreactors.turbine.controller.vent.overflow.line3": "冷卻液緩存槽",
   "gui.bigreactors.turbine.controller.vent.overflow.line4": "中的液體排出",
@@ -380,7 +380,7 @@
   "gui.bigreactors.turbine.redstoneport.sensortype.outputrotorspeed.speed.min": "轉速（最小）：",
   "gui.bigreactors.turbine.redstoneport.sensortype.outputrotorspeed.speed.max": "轉速（最大）：",
   "gui.bigreactors.turbine.redstoneport.sensortype.outputenergyamount.line1": "存儲能量",
-  "gui.bigreactors.turbine.redstoneport.sensortype.outputenergyamount.line2": "基於內部能量緩沖區中存儲",
+  "gui.bigreactors.turbine.redstoneport.sensortype.outputenergyamount.line2": "基於內部能量緩衝區中存儲",
   "gui.bigreactors.turbine.redstoneport.sensortype.outputenergyamount.line3": "能量的比例來發出紅石信號",
   "gui.bigreactors.turbine.redstoneport.sensortype.outputcoolantamount.line1": "冷卻液數量",
   "gui.bigreactors.turbine.redstoneport.sensortype.outputcoolantamount.line2": "基於內部冷卻液緩存槽中存儲",
@@ -401,11 +401,11 @@
   "gui.bigreactors.generator.redstoneport.sensortype.output": "紅石信號方向：輸出",
   "gui.bigreactors.generator.redstoneport.sensorbehavior.setfromsignal.line1": "根據紅石信號有無來設置",
   "gui.bigreactors.generator.redstoneport.sensorbehavior.setfromsignallevel.line1": "根據紅石信號強度來設置",
-  "gui.bigreactors.generator.redstoneport.sensorbehavior.setonpulse.line1": "有紅石脈沖時設置",
-  "gui.bigreactors.generator.redstoneport.sensorbehavior.toggleonpulse.line1": "有紅石脈沖時切換",
-  "gui.bigreactors.generator.redstoneport.sensorbehavior.insertonpulse.line1": "有紅石脈沖時增加",
-  "gui.bigreactors.generator.redstoneport.sensorbehavior.retractonpulse.line1": "有紅石脈沖時減少",
-  "gui.bigreactors.generator.redstoneport.sensorbehavior.ejectonpulse.line1": "有紅石脈沖時排出",
+  "gui.bigreactors.generator.redstoneport.sensorbehavior.setonpulse.line1": "有紅石脈衝時設置",
+  "gui.bigreactors.generator.redstoneport.sensorbehavior.toggleonpulse.line1": "有紅石脈衝時切換",
+  "gui.bigreactors.generator.redstoneport.sensorbehavior.insertonpulse.line1": "有紅石脈衝時增加",
+  "gui.bigreactors.generator.redstoneport.sensorbehavior.retractonpulse.line1": "有紅石脈衝時減少",
+  "gui.bigreactors.generator.redstoneport.sensorbehavior.ejectonpulse.line1": "有紅石脈衝時排出",
   "gui.bigreactors.generator.redstoneport.sensorbehavior.activewhileabove.line1": "大於多少時激活",
   "gui.bigreactors.generator.redstoneport.sensorbehavior.activewhilebelow.line1": "小於多少時激活",
   "gui.bigreactors.generator.redstoneport.sensorbehavior.activewhilebetween.line1": "介於什麽之間時激活",
@@ -418,9 +418,9 @@
   "gui.bigreactors.generator.redstoneport.sensortype.datalabel.amount": "數量：",
   "gui.bigreactors.generator.redstoneport.sensortype.datalabel.amount.min": "數量（最小）：",
   "gui.bigreactors.generator.redstoneport.sensortype.datalabel.amount.max": "數量（最大）：",
-  "gui.bigreactors.generator.redstoneport.sensortype.datalabel.bufferfilling": "內部緩沖區：",
-  "gui.bigreactors.generator.redstoneport.sensortype.datalabel.bufferfilling.min": "內部緩沖區（最小）：",
-  "gui.bigreactors.generator.redstoneport.sensortype.datalabel.bufferfilling.max": "內部緩沖區（最大）：",
+  "gui.bigreactors.generator.redstoneport.sensortype.datalabel.bufferfilling": "內部緩衝區：",
+  "gui.bigreactors.generator.redstoneport.sensortype.datalabel.bufferfilling.min": "內部緩衝區（最小）：",
+  "gui.bigreactors.generator.redstoneport.sensortype.datalabel.bufferfilling.max": "內部緩衝區（最大）：",
   "gui.bigreactors.generator.validation.redstoneport.invalidminmax.line1": "最大值應該比最小值大",
   "multiblock.validation.reactor.invalid_fuelrod_position": "燃料棒只能放置在反應堆內部",
   "multiblock.validation.reactor.invalid_part_for_interior": "這個反應堆部件不能放置在反應堆的內部",
@@ -470,8 +470,8 @@
   "config.bigreactors.turbine.turbinefluidperblademultiplier": "轉子葉片處理流體系數",
   "config.bigreactors.turbine.turbinemassdragmultiplier": "質量阻力系數",
   "config.bigreactors.turbine.turbinepowerproductionmultiplier": "渦輪機能量產出倍數",
-  "config.bigreactors.recipes.registercharcoalforsmelting": "燒制木炭得到石墨",
-  "config.bigreactors.recipes.registerCoalForSmelting": "燒制煤炭得到石墨",
+  "config.bigreactors.recipes.registercharcoalforsmelting": "燒製木炭得到石墨",
+  "config.bigreactors.recipes.registerCoalForSmelting": "燒製煤炭得到石墨",
   "config.bigreactors.worldgen.enableworldgen": "啟用世界生成",
   "config.bigreactors.worldgen.yelloriteoreenableworldgen": "是否生成黃鈾礦",
   "config.bigreactors.worldgen.yelloriteoremaxclustersperchunk": "每個區塊生成黃鈾礦脈的最大次數",
