--- a/biomancy/lang/zh_tw.json
+++ b/biomancy/lang/zh_tw.json
@@ -45,7 +45,7 @@
   "item.biomancy.nutrient_bar": "營養棒",
   "item.biomancy.nutrient_bar.tooltip": "把營養膏壓縮成一整塊食物棒後的樣子。能吃，但沒什麽味道。",
   "item.biomancy.bloomberry": "蕾莓",
-  "item.biomancy.bloomberry.tooltip": "怪異而美味的果實，帶有熒熒微光，食用時給予隨機藥水效果。",
+  "item.biomancy.bloomberry.tooltip": "怪異而美味的果實，帶有微微螢光，食用時給予隨機藥水效果。",
   "item.biomancy.regenerative_fluid": "再生黏液",
   "item.biomancy.regenerative_fluid.tooltip": "有著極強再生能力的液體，可用於調製治癒性原液。",
   "item.biomancy.withering_ooze": "凋零軟泥",
